ecommerce/microservices/k8s/05-zipkin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: ecommerce
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
