ecommerce/microservices/k8s/09-config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: ecommerce
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8888"
    spec:
      containers:
        - name: config-server
          image: config-server:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 40
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: ecommerce
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
