ecommerce/microservices/k8s/12-core-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-service
  template:
    metadata:
      labels:
        app: core-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8082"
    spec:
      containers:
        - name: core-service
          image: core-service:v5
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: ecommerce
spec:
  selector:
    app: core-service
  ports:
    - port: 8082
      targetPort: 8082
